# macOS-Security-Audit-Agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Mac Audit Agent.spec  README.md  SECURITY.md  Thankyou.md  launcher.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: ACKNOWLEDGEMENTS.md  ALERT_REGRESSION_ANALYSIS.md  ARCHITECTURE.md  CFAA_HARDWARE_NOTICE_DESIGN.md  DEPLOYMENT.md  DETECTOR_RELIABILITY.md  FRAMEWORK_MAPPING.md  GOVERNMENT_EVALUATION.md  LOCKDOWN_MODE_ANALYSIS.md  LOCKDOWN_MODE_ROOT_CAUSE.md  MONITOR_SETTINGS_AUDIT.md  NMAP_WRAPPER_REVIEW.md  OBJECTIVE_SEE_ALERT_REVIEW.md  OBJECTIVE_SEE_REVIEW.md  OPERATIONAL_SAFETY.md  PRIVACY.md  PUBLIC_RELEASE_CHECKLIST.md  PYPI_RELEASE_CHECKLIST.md  PYPI_RELEASE_REPORT.md  RELEASE_READINESS.md  THREAT_MODEL.md  UAT_BACKGROUND_MONITOR.md  UI_AUDIT.md  UI_BUTTON_INVENTORY.md
mac_audit_agent/: __init__.py  analyzers.py  app.py  assets.py  baseline_drift.py  cases.py  cli.py  collectors.py  command_registry.py  config.py  cve_radar.py  debug_collectors.py  emergency_lockdown.py  evidence_graph.py  explanations.py  fleet_baseline.py  frameworks.py  hardware_monitor.py  intrusion_correlation.py  investigation_priority.py  ioc_engine.py  launch_agent.py  models.py  monitor.py  monitor_settings.py  native_event_bridge.py  native_helper.py  network_discovery.py  network_monitor.py  nmap_wrapper.py  notification_manager.py  operational_health.py  packet_capture.py  privacy.py  privacy_monitor.py  recovery_center.py  reliability.py  reporting.py  rules.py  runner.py  (+13 more)
mac_audit_agent/assets/: app_icon.icns
mac_audit_agent/tests/: test_analyzers.py  test_apple_security_forecast_ui.py  test_assets.py  test_background_monitor.py  test_cases.py  (+31 more)
(+13 files in other folders)
